34.4.0 (27-09-2022)
- Improvement: Add AnyCurricularCourse new filters (negation, degree types, degrees, units, competence course levels and competence courses)
- Improvement: Add OR rule support for prefilter (only return true if any of child rules evalutes to NA)
- Improvement: Add AnyCurricularCourseExceptions prefilter support

34.3.3 (23-09-2022)
- Refactor: Declare default method IAcademicTreasuryTarget::getEventTargetCurrentState to retrieve to current state of the process associated with treasury event

34.3.2 (20-09-2022)
- Improvement: Allow deletion of execution course with messaging groups created

34.3.1 (16-09-2022)
- Refactor: Add method removeGrade to EnrolmentEvaluation

34.3.0 (01-09-2022)
- Refactor: Change ProgramConclusion targetState slot to RegistrationStateTypeEnum
- Refactor: Replace usage of RegistrationStateType by RegistrationStateTypeEnum

34.2.0 (31-08-2022)
- Bug Fix: Mark rules that prevent automatic group enrolment
- Bug Fix: Previous years rule verifier mode should test if rule applies to context 
- Refactor: Add log to previous years enrolment rule
- Refactor: Introduce RegistrationStateTypeEnum to ease conversion to entity

34.1.0 (24-08-2022)
- Improvement: Allow exclusiveness rule to be used in degrees without cycles
- Bug Fix: Annual curricular course should only be enroled in first period of year
- Bug Fix: Correctly evaluate previous years enrolment rule when execution year is not current 
- Refactor: Previous years enrolment rule code cleanup
- Refactor: Drop support for deprecated rule level (with temporary enrolments)
- Refactor: Unification of code from previous years enrolemnt rule

34.0.2 (12-08-2022)
- Improvement: Add support for activate/desactivate professional situation conditions
- Improvement: Diable profession type 'Other'

34.0.1 (20-07-2022)
- Bug Fix: Revert return of unmodifiable instance occupation intervals

34.0.0 (19-07-2022)
- Refactor: Clean unused legacy space occupation and space utils code  