@@ -1,3 +1,6 @@
+- Refactor: Add Curriculum API method to get unrounded grade
+- Refactor: Remove getWeigthedGradeSum deprecated method from curriculum calculator
+
 34.4.0 (27-09-2022)
 - Improvement: Add AnyCurricularCourse new filters (negation, degree types, degrees, units, competence course levels and competence courses)
 - Improvement: Add OR rule support for prefilter (only return true if any of child rules evalutes to NA)
